# prml-llm-memory

./: .env  .gitignore  README.md  load_backbone.py  main.py  pyproject.toml
mem_compressor/: augmented_llm.py  load_backbone.py  mem_compressor.py
models/: latent_mem_bank.py  mem_llm.py
scripts/: eval_hotpotqa.py  train.py
utils/: data_loader.py  metrics.py  trainer.py
